# LiteAI

./: .gitignore  README.md  publish.sh  pyproject.toml  requirements.txt  setup.py  test.py
data/: batch_test.jsonl
liteai/: __init__.py  api.py  cli.py  config.py  core.py  modelcard.py  tool.py  utils.py  voice.py
liteai/provider/: __init__.py  api.py  base.py  coze.py  deepseek.py  doubao.py  lite_llm.py  minimax.py  open_ai.py  qwen.py  siliconflow.py  tgi.py  xunfei.py  zhipu.py
tests/: base.py  test_common.py  test_coze.py  test_deepseek.py  test_doubao.py  test_minimax.py  test_ollama.py  test_openai.py  test_qwen.py  test_siliconflow.py  test_tgi.py  test_voice.py  test_xunfei.py  test_zhipu.py
unillm/: __init__.py  api.py  core.py  utils.py
unillm/provider/: api.py  litellm.py  zhipu.py
